--- a/.github/workflows/v2ray-deploy.yml
+++ b/.github/workflows/v2ray-deploy.yml
@@ -13,12 +13,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y curl
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Download and run installation script
+      - name: Install V2Ray on server
         run: |
-          curl -Ls https://raw.githubusercontent.com/NidukaAkalanka/x-ui-english/master/install.sh -o install.sh
-          sudo bash install.sh
+          ssh user@your-server-ip 'bash -s' < <(curl -Ls https://raw.githubusercontent.com/NidukaAkalanka/x-ui-english/master/install.sh)
